// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvTree::getTreeNode should return the tree node that contains a pointer to the given environment 1`] = `
Object {
  "head": Object {},
  "name": "global",
  "tail": null,
}
`;

exports[`EnvTree::insert should insert the globalEnvironment as the root 1`] = `
EnvTreeNode {
  "_children": Array [],
  "environment": Object {
    "head": Object {},
    "name": "global",
    "tail": null,
  },
  "parent": null,
}
`;

exports[`EnvTreeNode::addChild should add the given child node to the tree node 1`] = `
Array [
  EnvTreeNode {
    "_children": Array [],
    "environment": Object {
      "head": Object {},
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "Infinity": Infinity,
          "NaN": NaN,
          "apply_in_underlying_javascript": [Function],
          "array_length": [Function],
          "char_at": [Function],
          "display": [Function],
          "display_list": [Function],
          "draw_data": [Function],
          "error": [Function],
          "get_time": [Function],
          "head": [Function],
          "is_array": [Function],
          "is_boolean": [Function],
          "is_function": [Function],
          "is_null": [Function],
          "is_number": [Function],
          "is_pair": [Function],
          "is_string": [Function],
          "is_undefined": [Function],
          "list": [Function],
          "list_to_stream": [Function],
          "math_E": 2.718281828459045,
          "math_LN10": 2.302585092994046,
          "math_LN2": 0.6931471805599453,
          "math_LOG10E": 0.4342944819032518,
          "math_LOG2E": 1.4426950408889634,
          "math_PI": 3.141592653589793,
          "math_SQRT1_2": 0.7071067811865476,
          "math_SQRT2": 1.4142135623730951,
          "math_abs": [Function],
          "math_acos": [Function],
          "math_acosh": [Function],
          "math_asin": [Function],
          "math_asinh": [Function],
          "math_atan": [Function],
          "math_atan2": [Function],
          "math_atanh": [Function],
          "math_cbrt": [Function],
          "math_ceil": [Function],
          "math_clz32": [Function],
          "math_cos": [Function],
          "math_cosh": [Function],
          "math_exp": [Function],
          "math_expm1": [Function],
          "math_floor": [Function],
          "math_fround": [Function],
          "math_hypot": [Function],
          "math_imul": [Function],
          "math_log": [Function],
          "math_log10": [Function],
          "math_log1p": [Function],
          "math_log2": [Function],
          "math_max": [Function],
          "math_min": [Function],
          "math_pow": [Function],
          "math_random": [Function],
          "math_round": [Function],
          "math_sign": [Function],
          "math_sin": [Function],
          "math_sinh": [Function],
          "math_sqrt": [Function],
          "math_tan": [Function],
          "math_tanh": [Function],
          "math_trunc": [Function],
          "pair": [Function],
          "parse": [Function],
          "parse_int": [Function],
          "prompt": [Function],
          "raw_display": [Function],
          "set_head": [Function],
          "set_tail": [Function],
          "stream": [Function],
          "stream_tail": [Function],
          "stringify": [Function],
          "tail": [Function],
          "tokenize": [Function],
          "undefined": undefined,
        },
        "name": "global",
        "tail": null,
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {
          "Infinity": Infinity,
          "NaN": NaN,
          "apply_in_underlying_javascript": [Function],
          "array_length": [Function],
          "char_at": [Function],
          "display": [Function],
          "display_list": [Function],
          "draw_data": [Function],
          "error": [Function],
          "get_time": [Function],
          "head": [Function],
          "is_array": [Function],
          "is_boolean": [Function],
          "is_function": [Function],
          "is_null": [Function],
          "is_number": [Function],
          "is_pair": [Function],
          "is_string": [Function],
          "is_undefined": [Function],
          "list": [Function],
          "list_to_stream": [Function],
          "math_E": 2.718281828459045,
          "math_LN10": 2.302585092994046,
          "math_LN2": 0.6931471805599453,
          "math_LOG10E": 0.4342944819032518,
          "math_LOG2E": 1.4426950408889634,
          "math_PI": 3.141592653589793,
          "math_SQRT1_2": 0.7071067811865476,
          "math_SQRT2": 1.4142135623730951,
          "math_abs": [Function],
          "math_acos": [Function],
          "math_acosh": [Function],
          "math_asin": [Function],
          "math_asinh": [Function],
          "math_atan": [Function],
          "math_atan2": [Function],
          "math_atanh": [Function],
          "math_cbrt": [Function],
          "math_ceil": [Function],
          "math_clz32": [Function],
          "math_cos": [Function],
          "math_cosh": [Function],
          "math_exp": [Function],
          "math_expm1": [Function],
          "math_floor": [Function],
          "math_fround": [Function],
          "math_hypot": [Function],
          "math_imul": [Function],
          "math_log": [Function],
          "math_log10": [Function],
          "math_log1p": [Function],
          "math_log2": [Function],
          "math_max": [Function],
          "math_min": [Function],
          "math_pow": [Function],
          "math_random": [Function],
          "math_round": [Function],
          "math_sign": [Function],
          "math_sin": [Function],
          "math_sinh": [Function],
          "math_sqrt": [Function],
          "math_tan": [Function],
          "math_tanh": [Function],
          "math_trunc": [Function],
          "pair": [Function],
          "parse": [Function],
          "parse_int": [Function],
          "prompt": [Function],
          "raw_display": [Function],
          "set_head": [Function],
          "set_tail": [Function],
          "stream": [Function],
          "stream_tail": [Function],
          "stringify": [Function],
          "tail": [Function],
          "tokenize": [Function],
          "undefined": undefined,
        },
        "name": "global",
        "tail": null,
      },
      "parent": null,
    },
  },
]
`;

exports[`EnvTreeNode::resetChildren should reset the children of the node to the given children 1`] = `
Array [
  EnvTreeNode {
    "_children": Array [],
    "environment": Object {
      "head": Object {},
      "name": "blockEnvironment",
      "tail": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
      "parent": EnvTreeNode {
        "_children": Array [
          [Circular],
        ],
        "environment": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
        "parent": null,
      },
    },
  },
  EnvTreeNode {
    "_children": Array [],
    "environment": Object {
      "head": Object {},
      "name": "blockEnvironment",
      "tail": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
      "parent": EnvTreeNode {
        "_children": Array [
          [Circular],
        ],
        "environment": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
        "parent": null,
      },
    },
  },
  EnvTreeNode {
    "_children": Array [
      EnvTreeNode {
        "_children": Array [],
        "environment": Object {
          "head": Object {},
          "name": "blockEnvironment",
          "tail": Object {
            "head": Object {},
            "name": "blockEnvironment",
            "tail": Object {
              "head": Object {},
              "name": "programEnvironment",
              "tail": Object {
                "head": Object {
                  "Infinity": Infinity,
                  "NaN": NaN,
                  "apply_in_underlying_javascript": [Function],
                  "array_length": [Function],
                  "char_at": [Function],
                  "display": [Function],
                  "display_list": [Function],
                  "draw_data": [Function],
                  "error": [Function],
                  "get_time": [Function],
                  "head": [Function],
                  "is_array": [Function],
                  "is_boolean": [Function],
                  "is_function": [Function],
                  "is_null": [Function],
                  "is_number": [Function],
                  "is_pair": [Function],
                  "is_string": [Function],
                  "is_undefined": [Function],
                  "list": [Function],
                  "list_to_stream": [Function],
                  "math_E": 2.718281828459045,
                  "math_LN10": 2.302585092994046,
                  "math_LN2": 0.6931471805599453,
                  "math_LOG10E": 0.4342944819032518,
                  "math_LOG2E": 1.4426950408889634,
                  "math_PI": 3.141592653589793,
                  "math_SQRT1_2": 0.7071067811865476,
                  "math_SQRT2": 1.4142135623730951,
                  "math_abs": [Function],
                  "math_acos": [Function],
                  "math_acosh": [Function],
                  "math_asin": [Function],
                  "math_asinh": [Function],
                  "math_atan": [Function],
                  "math_atan2": [Function],
                  "math_atanh": [Function],
                  "math_cbrt": [Function],
                  "math_ceil": [Function],
                  "math_clz32": [Function],
                  "math_cos": [Function],
                  "math_cosh": [Function],
                  "math_exp": [Function],
                  "math_expm1": [Function],
                  "math_floor": [Function],
                  "math_fround": [Function],
                  "math_hypot": [Function],
                  "math_imul": [Function],
                  "math_log": [Function],
                  "math_log10": [Function],
                  "math_log1p": [Function],
                  "math_log2": [Function],
                  "math_max": [Function],
                  "math_min": [Function],
                  "math_pow": [Function],
                  "math_random": [Function],
                  "math_round": [Function],
                  "math_sign": [Function],
                  "math_sin": [Function],
                  "math_sinh": [Function],
                  "math_sqrt": [Function],
                  "math_tan": [Function],
                  "math_tanh": [Function],
                  "math_trunc": [Function],
                  "pair": [Function],
                  "parse": [Function],
                  "parse_int": [Function],
                  "prompt": [Function],
                  "raw_display": [Function],
                  "set_head": [Function],
                  "set_tail": [Function],
                  "stream": [Function],
                  "stream_tail": [Function],
                  "stringify": [Function],
                  "tail": [Function],
                  "tokenize": [Function],
                  "undefined": undefined,
                },
                "name": "global",
                "tail": null,
              },
            },
          },
        },
        "parent": [Circular],
      },
      EnvTreeNode {
        "_children": Array [],
        "environment": Object {
          "head": Object {},
          "name": "blockEnvironment",
          "tail": Object {
            "head": Object {},
            "name": "blockEnvironment",
            "tail": Object {
              "head": Object {},
              "name": "programEnvironment",
              "tail": Object {
                "head": Object {
                  "Infinity": Infinity,
                  "NaN": NaN,
                  "apply_in_underlying_javascript": [Function],
                  "array_length": [Function],
                  "char_at": [Function],
                  "display": [Function],
                  "display_list": [Function],
                  "draw_data": [Function],
                  "error": [Function],
                  "get_time": [Function],
                  "head": [Function],
                  "is_array": [Function],
                  "is_boolean": [Function],
                  "is_function": [Function],
                  "is_null": [Function],
                  "is_number": [Function],
                  "is_pair": [Function],
                  "is_string": [Function],
                  "is_undefined": [Function],
                  "list": [Function],
                  "list_to_stream": [Function],
                  "math_E": 2.718281828459045,
                  "math_LN10": 2.302585092994046,
                  "math_LN2": 0.6931471805599453,
                  "math_LOG10E": 0.4342944819032518,
                  "math_LOG2E": 1.4426950408889634,
                  "math_PI": 3.141592653589793,
                  "math_SQRT1_2": 0.7071067811865476,
                  "math_SQRT2": 1.4142135623730951,
                  "math_abs": [Function],
                  "math_acos": [Function],
                  "math_acosh": [Function],
                  "math_asin": [Function],
                  "math_asinh": [Function],
                  "math_atan": [Function],
                  "math_atan2": [Function],
                  "math_atanh": [Function],
                  "math_cbrt": [Function],
                  "math_ceil": [Function],
                  "math_clz32": [Function],
                  "math_cos": [Function],
                  "math_cosh": [Function],
                  "math_exp": [Function],
                  "math_expm1": [Function],
                  "math_floor": [Function],
                  "math_fround": [Function],
                  "math_hypot": [Function],
                  "math_imul": [Function],
                  "math_log": [Function],
                  "math_log10": [Function],
                  "math_log1p": [Function],
                  "math_log2": [Function],
                  "math_max": [Function],
                  "math_min": [Function],
                  "math_pow": [Function],
                  "math_random": [Function],
                  "math_round": [Function],
                  "math_sign": [Function],
                  "math_sin": [Function],
                  "math_sinh": [Function],
                  "math_sqrt": [Function],
                  "math_tan": [Function],
                  "math_tanh": [Function],
                  "math_trunc": [Function],
                  "pair": [Function],
                  "parse": [Function],
                  "parse_int": [Function],
                  "prompt": [Function],
                  "raw_display": [Function],
                  "set_head": [Function],
                  "set_tail": [Function],
                  "stream": [Function],
                  "stream_tail": [Function],
                  "stringify": [Function],
                  "tail": [Function],
                  "tokenize": [Function],
                  "undefined": undefined,
                },
                "name": "global",
                "tail": null,
              },
            },
          },
        },
        "parent": [Circular],
      },
      EnvTreeNode {
        "_children": Array [],
        "environment": Object {
          "head": Object {},
          "name": "blockEnvironment",
          "tail": Object {
            "head": Object {},
            "name": "blockEnvironment",
            "tail": Object {
              "head": Object {},
              "name": "programEnvironment",
              "tail": Object {
                "head": Object {
                  "Infinity": Infinity,
                  "NaN": NaN,
                  "apply_in_underlying_javascript": [Function],
                  "array_length": [Function],
                  "char_at": [Function],
                  "display": [Function],
                  "display_list": [Function],
                  "draw_data": [Function],
                  "error": [Function],
                  "get_time": [Function],
                  "head": [Function],
                  "is_array": [Function],
                  "is_boolean": [Function],
                  "is_function": [Function],
                  "is_null": [Function],
                  "is_number": [Function],
                  "is_pair": [Function],
                  "is_string": [Function],
                  "is_undefined": [Function],
                  "list": [Function],
                  "list_to_stream": [Function],
                  "math_E": 2.718281828459045,
                  "math_LN10": 2.302585092994046,
                  "math_LN2": 0.6931471805599453,
                  "math_LOG10E": 0.4342944819032518,
                  "math_LOG2E": 1.4426950408889634,
                  "math_PI": 3.141592653589793,
                  "math_SQRT1_2": 0.7071067811865476,
                  "math_SQRT2": 1.4142135623730951,
                  "math_abs": [Function],
                  "math_acos": [Function],
                  "math_acosh": [Function],
                  "math_asin": [Function],
                  "math_asinh": [Function],
                  "math_atan": [Function],
                  "math_atan2": [Function],
                  "math_atanh": [Function],
                  "math_cbrt": [Function],
                  "math_ceil": [Function],
                  "math_clz32": [Function],
                  "math_cos": [Function],
                  "math_cosh": [Function],
                  "math_exp": [Function],
                  "math_expm1": [Function],
                  "math_floor": [Function],
                  "math_fround": [Function],
                  "math_hypot": [Function],
                  "math_imul": [Function],
                  "math_log": [Function],
                  "math_log10": [Function],
                  "math_log1p": [Function],
                  "math_log2": [Function],
                  "math_max": [Function],
                  "math_min": [Function],
                  "math_pow": [Function],
                  "math_random": [Function],
                  "math_round": [Function],
                  "math_sign": [Function],
                  "math_sin": [Function],
                  "math_sinh": [Function],
                  "math_sqrt": [Function],
                  "math_tan": [Function],
                  "math_tanh": [Function],
                  "math_trunc": [Function],
                  "pair": [Function],
                  "parse": [Function],
                  "parse_int": [Function],
                  "prompt": [Function],
                  "raw_display": [Function],
                  "set_head": [Function],
                  "set_tail": [Function],
                  "stream": [Function],
                  "stream_tail": [Function],
                  "stringify": [Function],
                  "tail": [Function],
                  "tokenize": [Function],
                  "undefined": undefined,
                },
                "name": "global",
                "tail": null,
              },
            },
          },
        },
        "parent": [Circular],
      },
    ],
    "environment": Object {
      "head": Object {},
      "name": "blockEnvironment",
      "tail": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
      "parent": EnvTreeNode {
        "_children": Array [
          [Circular],
        ],
        "environment": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
        "parent": null,
      },
    },
  },
]
`;

exports[`EnvTreeNode::resetChildren should reset the children of the node to the given children 2`] = `
Array [
  EnvTreeNode {
    "_children": Array [],
    "environment": Object {
      "head": Object {},
      "name": "blockEnvironment",
      "tail": Object {
        "head": Object {},
        "name": "blockEnvironment",
        "tail": Object {
          "head": Object {},
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              "Infinity": Infinity,
              "NaN": NaN,
              "apply_in_underlying_javascript": [Function],
              "array_length": [Function],
              "char_at": [Function],
              "display": [Function],
              "display_list": [Function],
              "draw_data": [Function],
              "error": [Function],
              "get_time": [Function],
              "head": [Function],
              "is_array": [Function],
              "is_boolean": [Function],
              "is_function": [Function],
              "is_null": [Function],
              "is_number": [Function],
              "is_pair": [Function],
              "is_string": [Function],
              "is_undefined": [Function],
              "list": [Function],
              "list_to_stream": [Function],
              "math_E": 2.718281828459045,
              "math_LN10": 2.302585092994046,
              "math_LN2": 0.6931471805599453,
              "math_LOG10E": 0.4342944819032518,
              "math_LOG2E": 1.4426950408889634,
              "math_PI": 3.141592653589793,
              "math_SQRT1_2": 0.7071067811865476,
              "math_SQRT2": 1.4142135623730951,
              "math_abs": [Function],
              "math_acos": [Function],
              "math_acosh": [Function],
              "math_asin": [Function],
              "math_asinh": [Function],
              "math_atan": [Function],
              "math_atan2": [Function],
              "math_atanh": [Function],
              "math_cbrt": [Function],
              "math_ceil": [Function],
              "math_clz32": [Function],
              "math_cos": [Function],
              "math_cosh": [Function],
              "math_exp": [Function],
              "math_expm1": [Function],
              "math_floor": [Function],
              "math_fround": [Function],
              "math_hypot": [Function],
              "math_imul": [Function],
              "math_log": [Function],
              "math_log10": [Function],
              "math_log1p": [Function],
              "math_log2": [Function],
              "math_max": [Function],
              "math_min": [Function],
              "math_pow": [Function],
              "math_random": [Function],
              "math_round": [Function],
              "math_sign": [Function],
              "math_sin": [Function],
              "math_sinh": [Function],
              "math_sqrt": [Function],
              "math_tan": [Function],
              "math_tanh": [Function],
              "math_trunc": [Function],
              "pair": [Function],
              "parse": [Function],
              "parse_int": [Function],
              "prompt": [Function],
              "raw_display": [Function],
              "set_head": [Function],
              "set_tail": [Function],
              "stream": [Function],
              "stream_tail": [Function],
              "stringify": [Function],
              "tail": [Function],
              "tokenize": [Function],
              "undefined": undefined,
            },
            "name": "global",
            "tail": null,
          },
        },
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
      "parent": EnvTreeNode {
        "_children": Array [
          [Circular],
        ],
        "environment": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
        "parent": null,
      },
    },
  },
  EnvTreeNode {
    "_children": Array [],
    "environment": Object {
      "head": Object {},
      "name": "blockEnvironment",
      "tail": Object {
        "head": Object {},
        "name": "blockEnvironment",
        "tail": Object {
          "head": Object {},
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              "Infinity": Infinity,
              "NaN": NaN,
              "apply_in_underlying_javascript": [Function],
              "array_length": [Function],
              "char_at": [Function],
              "display": [Function],
              "display_list": [Function],
              "draw_data": [Function],
              "error": [Function],
              "get_time": [Function],
              "head": [Function],
              "is_array": [Function],
              "is_boolean": [Function],
              "is_function": [Function],
              "is_null": [Function],
              "is_number": [Function],
              "is_pair": [Function],
              "is_string": [Function],
              "is_undefined": [Function],
              "list": [Function],
              "list_to_stream": [Function],
              "math_E": 2.718281828459045,
              "math_LN10": 2.302585092994046,
              "math_LN2": 0.6931471805599453,
              "math_LOG10E": 0.4342944819032518,
              "math_LOG2E": 1.4426950408889634,
              "math_PI": 3.141592653589793,
              "math_SQRT1_2": 0.7071067811865476,
              "math_SQRT2": 1.4142135623730951,
              "math_abs": [Function],
              "math_acos": [Function],
              "math_acosh": [Function],
              "math_asin": [Function],
              "math_asinh": [Function],
              "math_atan": [Function],
              "math_atan2": [Function],
              "math_atanh": [Function],
              "math_cbrt": [Function],
              "math_ceil": [Function],
              "math_clz32": [Function],
              "math_cos": [Function],
              "math_cosh": [Function],
              "math_exp": [Function],
              "math_expm1": [Function],
              "math_floor": [Function],
              "math_fround": [Function],
              "math_hypot": [Function],
              "math_imul": [Function],
              "math_log": [Function],
              "math_log10": [Function],
              "math_log1p": [Function],
              "math_log2": [Function],
              "math_max": [Function],
              "math_min": [Function],
              "math_pow": [Function],
              "math_random": [Function],
              "math_round": [Function],
              "math_sign": [Function],
              "math_sin": [Function],
              "math_sinh": [Function],
              "math_sqrt": [Function],
              "math_tan": [Function],
              "math_tanh": [Function],
              "math_trunc": [Function],
              "pair": [Function],
              "parse": [Function],
              "parse_int": [Function],
              "prompt": [Function],
              "raw_display": [Function],
              "set_head": [Function],
              "set_tail": [Function],
              "stream": [Function],
              "stream_tail": [Function],
              "stringify": [Function],
              "tail": [Function],
              "tokenize": [Function],
              "undefined": undefined,
            },
            "name": "global",
            "tail": null,
          },
        },
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
      "parent": EnvTreeNode {
        "_children": Array [
          [Circular],
        ],
        "environment": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
        "parent": null,
      },
    },
  },
  EnvTreeNode {
    "_children": Array [],
    "environment": Object {
      "head": Object {},
      "name": "blockEnvironment",
      "tail": Object {
        "head": Object {},
        "name": "blockEnvironment",
        "tail": Object {
          "head": Object {},
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              "Infinity": Infinity,
              "NaN": NaN,
              "apply_in_underlying_javascript": [Function],
              "array_length": [Function],
              "char_at": [Function],
              "display": [Function],
              "display_list": [Function],
              "draw_data": [Function],
              "error": [Function],
              "get_time": [Function],
              "head": [Function],
              "is_array": [Function],
              "is_boolean": [Function],
              "is_function": [Function],
              "is_null": [Function],
              "is_number": [Function],
              "is_pair": [Function],
              "is_string": [Function],
              "is_undefined": [Function],
              "list": [Function],
              "list_to_stream": [Function],
              "math_E": 2.718281828459045,
              "math_LN10": 2.302585092994046,
              "math_LN2": 0.6931471805599453,
              "math_LOG10E": 0.4342944819032518,
              "math_LOG2E": 1.4426950408889634,
              "math_PI": 3.141592653589793,
              "math_SQRT1_2": 0.7071067811865476,
              "math_SQRT2": 1.4142135623730951,
              "math_abs": [Function],
              "math_acos": [Function],
              "math_acosh": [Function],
              "math_asin": [Function],
              "math_asinh": [Function],
              "math_atan": [Function],
              "math_atan2": [Function],
              "math_atanh": [Function],
              "math_cbrt": [Function],
              "math_ceil": [Function],
              "math_clz32": [Function],
              "math_cos": [Function],
              "math_cosh": [Function],
              "math_exp": [Function],
              "math_expm1": [Function],
              "math_floor": [Function],
              "math_fround": [Function],
              "math_hypot": [Function],
              "math_imul": [Function],
              "math_log": [Function],
              "math_log10": [Function],
              "math_log1p": [Function],
              "math_log2": [Function],
              "math_max": [Function],
              "math_min": [Function],
              "math_pow": [Function],
              "math_random": [Function],
              "math_round": [Function],
              "math_sign": [Function],
              "math_sin": [Function],
              "math_sinh": [Function],
              "math_sqrt": [Function],
              "math_tan": [Function],
              "math_tanh": [Function],
              "math_trunc": [Function],
              "pair": [Function],
              "parse": [Function],
              "parse_int": [Function],
              "prompt": [Function],
              "raw_display": [Function],
              "set_head": [Function],
              "set_tail": [Function],
              "stream": [Function],
              "stream_tail": [Function],
              "stringify": [Function],
              "tail": [Function],
              "tokenize": [Function],
              "undefined": undefined,
            },
            "name": "global",
            "tail": null,
          },
        },
      },
    },
    "parent": EnvTreeNode {
      "_children": [Circular],
      "environment": Object {
        "head": Object {},
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
      },
      "parent": EnvTreeNode {
        "_children": Array [
          [Circular],
        ],
        "environment": Object {
          "head": Object {
            "Infinity": Infinity,
            "NaN": NaN,
            "apply_in_underlying_javascript": [Function],
            "array_length": [Function],
            "char_at": [Function],
            "display": [Function],
            "display_list": [Function],
            "draw_data": [Function],
            "error": [Function],
            "get_time": [Function],
            "head": [Function],
            "is_array": [Function],
            "is_boolean": [Function],
            "is_function": [Function],
            "is_null": [Function],
            "is_number": [Function],
            "is_pair": [Function],
            "is_string": [Function],
            "is_undefined": [Function],
            "list": [Function],
            "list_to_stream": [Function],
            "math_E": 2.718281828459045,
            "math_LN10": 2.302585092994046,
            "math_LN2": 0.6931471805599453,
            "math_LOG10E": 0.4342944819032518,
            "math_LOG2E": 1.4426950408889634,
            "math_PI": 3.141592653589793,
            "math_SQRT1_2": 0.7071067811865476,
            "math_SQRT2": 1.4142135623730951,
            "math_abs": [Function],
            "math_acos": [Function],
            "math_acosh": [Function],
            "math_asin": [Function],
            "math_asinh": [Function],
            "math_atan": [Function],
            "math_atan2": [Function],
            "math_atanh": [Function],
            "math_cbrt": [Function],
            "math_ceil": [Function],
            "math_clz32": [Function],
            "math_cos": [Function],
            "math_cosh": [Function],
            "math_exp": [Function],
            "math_expm1": [Function],
            "math_floor": [Function],
            "math_fround": [Function],
            "math_hypot": [Function],
            "math_imul": [Function],
            "math_log": [Function],
            "math_log10": [Function],
            "math_log1p": [Function],
            "math_log2": [Function],
            "math_max": [Function],
            "math_min": [Function],
            "math_pow": [Function],
            "math_random": [Function],
            "math_round": [Function],
            "math_sign": [Function],
            "math_sin": [Function],
            "math_sinh": [Function],
            "math_sqrt": [Function],
            "math_tan": [Function],
            "math_tanh": [Function],
            "math_trunc": [Function],
            "pair": [Function],
            "parse": [Function],
            "parse_int": [Function],
            "prompt": [Function],
            "raw_display": [Function],
            "set_head": [Function],
            "set_tail": [Function],
            "stream": [Function],
            "stream_tail": [Function],
            "stringify": [Function],
            "tail": [Function],
            "tokenize": [Function],
            "undefined": undefined,
          },
          "name": "global",
          "tail": null,
        },
        "parent": null,
      },
    },
  },
]
`;
